arrayJsonTransform